--- a/lib/package.json
+++ b/lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hover-design-prototype",
+  "name": "@hover-design/react",
   "version": "0.0.4",
   "description": "Prototype for Hover Design",
   "license": "MIT",
