--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,7 @@
 packages:
   - "lib/**"
+  - "docs/**"
+  - "examples/**"
   # exclude packages that are inside test directories
   - "!**/test/**"
   - "!**/__tests__/**"
