change acess to private for examples

--- a/examples/vanilla-extract-react/package.json
+++ b/examples/vanilla-extract-react/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vanilla-extract-react-example",
   "version": "0.0.0",
+  "private":"true",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
