--- a/docs/package.json
+++ b/docs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docs",
   "version": "0.0.0",
-  "private": true,
+  "private": "true",
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
