--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "url": "git+https://github.com/antstackio/hover-design.git"
   },
   "devDependencies": {
+    "pnpm": "6",
     "turbo": "^1.1.6"
   },
   "packageManager": "pnpm@6.32.3",
   "scripts": {
+    "prebuild": "test \"$CI\" = true && npx pnpm install -r --store=node_modules/.pnpm-store || echo skiping pnpm install",
     "build": "turbo run build",
     "dev": "turbo run dev --no-cache --parallel --continue",
     "storybook": "turbo run storybook --no-cache --parallel --continue",
