--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
     publish = "./docs/build"
-    command = "pnpm run build || ( npm install pnpm turbo && pnpm i && pnpm run build )"
+    command = "pnpm run build || ( npm install pnpm turbo && pnpm i --no-frozen-lockfile && pnpm run build )"
 [build.environment]
   NODE_VERSION = "14"
   NPM_FLAGS = "--prefix=/dev/null"
