--- a/docs/package.json
+++ b/docs/package.json
@@ -21,6 +21,7 @@
     "@vanilla-extract/css": "^1.6.8",
     "@vanilla-extract/webpack-plugin": "^2.1.10",
     "clsx": "^1.1.1",
+    "docusaurus-plugin-vanilla-extract": "^1.0.1",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
