--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "private": true,
   "name": "@hover-design/base",
   "version": "1.0.0",
   "description": "Hover Component library created by bunch of ants from antstack",
@@ -10,13 +9,15 @@
     "url": "git+https://github.com/antstackio/hover-design.git"
   },
   "devDependencies": {
+    "pnpm": "6",
     "turbo": "^1.1.6"
   },
+  "packageManager": "pnpm@6.32.3",
   "scripts": {
+    "prebuild": "test \"$CI\" = true && npx pnpm install -r --store=node_modules/.pnpm-store || echo skiping pnpm install",
     "build": "turbo run build",
     "dev": "turbo run dev --no-cache --parallel --continue",
-    "storybook": "turbo run storybook --no-cache --parallel --continue",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "storybook": "turbo run storybook --no-cache --parallel --continue"
   },
   "keywords": [
     "hover",
