--- a/turbo.json
+++ b/turbo.json
@@ -1,9 +1,11 @@
 {
+  "$schema": "https://turborepo.org/schema.json",
+
   "baseBranch": "origin/main",
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**", "src/**"]
+      "outputs": ["dist/**", "src/**", "build/**"]
     },
     "dev": {},
     "storybook": {}
