--- a/docs/package.json
+++ b/docs/package.json
@@ -11,7 +11,8 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "dev": "docusaurus start"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-beta.20",
