--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,43 +1,42 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
 
-name: Node.js Package
+name: Publish to NPM
 
 on:
   release:
     types: [created]
-
 jobs:
-  publish:
-    runs-on: ubuntu-latest
+  build:
+    name: Build and Publish
+    timeout-minutes: 15
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
+      - name: Check out code
+        uses: actions/checkout@v2
         with:
-          node-version: 16
-          registry-url: https://registry.npmjs.org/
+          fetch-depth: 2
 
       - uses: pnpm/action-setup@v2.0.1
-        name: Install pnpm
-        id: pnpm-install
         with:
-          version: 7
-          run_install: false
+          version: 6.32.2
 
-      - name: Get pnpm store directory
-        id: pnpm-cache
-        run: |
-          echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
-
-      - uses: actions/cache@v3
-        name: Setup pnpm cache
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2
         with:
-          path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-      - name: Install dependencies and build 🔧
-        run: pnpm i && pnpm build
+          node-version: 16
+          cache: "pnpm"
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Build
+        run: pnpm build
+
       - name: Publish package on NPM 📦
         run: cd ./lib && pnpm publish
         env:
