--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -38,6 +38,6 @@ jobs:
         run: pnpm build
 
       - name: Publish package on NPM 📦
-        run: cd ./lib && pnpm publish
+        run: cd ./lib && pnpm publish --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
