--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -30,12 +30,19 @@ jobs:
         with:
           node-version: 16
           cache: "pnpm"
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
 
       - name: Build
         run: pnpm build
+
+      - name: Configure npm
+        run: |
+          echo '//registry.npmjs.org/:_authToken=${NPM_TOKEN}' > .npmrc
+          cat .npmrc
 
       - name: Publish package on NPM 📦
         run: cd ./lib && npm publish --access public --no-git-checks
