--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,8 +4,8 @@
 name: Publish to NPM
 
 on:
-  release:
-    types: [created]
+  pull_request:
+    branches: [main]
 jobs:
   build:
     name: Build and Publish
