--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,3 @@
 [build]
     publish = "./build"
-    command = "( pnpm install --no-frozen-lockfile  || npm install pnpm turbo ) && cd .. && pnpm install --no-frozen-lockfile  && npx turbo run build --scope=docs --include-dependencies --no-deps"
-[build.environment]
-    NODE_VERSION = "16"
-    NPM_FLAGS = "--prefix=/dev/null"
-    
+    command = "( pnpm run build  || npm install pnpm turbo ) && cd .. && pnpm install --no-frozen-lockfile  && npx turbo run build --scope=docs --include-dependencies --no-deps"
