--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "component library",
     "design system"
   ],
-  "author": "AntStack <connect@antstak.io> (https://antstack.io)",
+  "author": "AntStack <connect@antstak.com> (https://antstack.com)",
   "license": "MIT"
 }
