Fix Preview Builds (#29)
* Removes outdated env vars causing builds to break

* Docs nitpick fixes

* Update package.json

Co-authored-by: Raalzz <30571073+Raalzz@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hover-design/base",
   "version": "1.0.0",
-  "description": "Hover Component library created by bunch of ants from antstack",
+  "description": "Hover Component library created by bunch of ants from AntStack",
   "main": "index.js",
   "homepage": "https://github.com/antstackio/hover-design",
   "repository": {
@@ -24,6 +24,6 @@
     "component library",
     "design system"
   ],
-  "author": "Antstack <connect@antstak.io> (https://antstack.io)",
+  "author": "AntStack <connect@antstak.com> (https://antstack.com)",
   "license": "MIT"
 }
