--- a/lib/package.json
+++ b/lib/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@vanilla-extract/css": "^1.6.8",
+    "@vanilla-extract/css-utils": "^0.1.2",
     "@vanilla-extract/dynamic": "^2.0.2",
     "@vanilla-extract/recipes": "^0.2.3",
     "@vanilla-extract/sprinkles": "^1.3.3",
