--- a/examples/vanilla-extract-react/package.json
+++ b/examples/vanilla-extract-react/package.json
@@ -11,9 +11,9 @@
     "@vanilla-extract/css": "^1.6.8",
     "@vanilla-extract/vite-plugin": "^3.1.2",
     "polished": "^4.1.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "vite-tsconfig-paths": "^3.3.17",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vite-tsconfig-paths": "^3.3.17"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
