--- a/lib/package.json
+++ b/lib/package.json
@@ -18,14 +18,13 @@
   },
   "dependencies": {
     "@vanilla-extract/css": "^1.6.8",
+    "@vanilla-extract/css-utils": "^0.1.2",
     "@vanilla-extract/dynamic": "^2.0.2",
     "@vanilla-extract/recipes": "^0.2.3",
     "@vanilla-extract/sprinkles": "^1.3.3",
     "@vanilla-extract/vite-plugin": "^3.1.0",
     "deepmerge": "^4.2.2",
-    "polished": "^4.1.3",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "polished": "^4.1.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
@@ -39,8 +38,8 @@
     "vite-tsconfig-paths": "^3.4.0"
   },
   "peerDependencies": {
-    "react": "^17",
-    "react-dom": "^17"
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   },
   "repository": {
     "type": "git",
