--- a/lib/package.json
+++ b/lib/package.json
@@ -24,7 +24,9 @@
     "@vanilla-extract/sprinkles": "^1.3.3",
     "@vanilla-extract/vite-plugin": "^3.1.0",
     "deepmerge": "^4.2.2",
-    "polished": "^4.1.3"
+    "polished": "^4.1.3",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
