--- a/lib/package.json
+++ b/lib/package.json
@@ -35,7 +35,9 @@
     "typescript": "^4.3.2",
     "vite": "^2.6.4",
     "vite-plugin-dts": "^0.9.9",
-    "vite-tsconfig-paths": "^3.4.0"
+    "vite-tsconfig-paths": "^3.4.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
