--- a/docs/package.json
+++ b/docs/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "docusaurus": "docusaurus",
+    "dev": "docusaurus start --port 8080",
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
@@ -11,8 +12,7 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc",
-    "dev": "docusaurus start"
+    "typecheck": "tsc"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.1",
