--- a/docs/package.json
+++ b/docs/package.json
@@ -12,7 +12,7 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "dev": "docusaurus start"
+    "dev": "docusaurus start --port=3001"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.1",
