Adds Publish build

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -38,7 +38,7 @@ jobs:
         run: pnpm install --no-frozen-lockfile
 
       - name: Build
-        run: pnpm build
+        run: pnpm publish-build
 
       - name: Publish package on NPM 📦
         run: cd ./lib && npm publish --access public --no-git-checks
