--- a/lib/package.json
+++ b/lib/package.json
@@ -17,6 +17,7 @@
     "watch": "nodemon --watch src/ -e ts,tsx --exec \"tsc && vite build && tsc --emitDeclarationOnly\""
   },
   "dependencies": {
+    "@ladle/react": "^2.3.0",
     "@vanilla-extract/css": "^1.6.8",
     "@vanilla-extract/css-utils": "^0.1.2",
     "@vanilla-extract/dynamic": "^2.0.2",
