HOV-46 Adds Readme for `lib` folder and keywords

--- a/lib/package.json
+++ b/lib/package.json
@@ -7,6 +7,22 @@
   "module": "dist/hover-react.es.js",
   "types": "dist/types/index.d.ts",
   "private": false,
+  "repository": {
+    "url": "https://github.com/antstackio/hover-design.git",
+    "type": "git",
+    "directory": "lib"
+  },
+  "keywords": [
+    "react",
+    "ui",
+    "components",
+    "ui-kit",
+    "library",
+    "frontend",
+    "design",
+    "vanilla-extract",
+    "hover"
+  ],
   "scripts": {
     "dev": "nodemon --watch src/ -e ts,tsx --exec \"tsc && vite build && tsc --emitDeclarationOnly\"",
     "build": "tsc && vite build && tsc --emitDeclarationOnly",
