--- a/lib/package.json
+++ b/lib/package.json
@@ -8,9 +8,8 @@
   "types": "dist/types/index.d.ts",
   "private": false,
   "repository": {
-    "url": "https://github.com/antstackio/hover-design.git",
     "type": "git",
-    "directory": "lib"
+    "url": "git+https://github.com/antstackio/hover-design.git"
   },
   "keywords": [
     "react",
@@ -29,7 +28,9 @@
     "tsc": "tsc",
     "ladle": "ladle serve",
     "serve": "vite preview",
-    "watch": "nodemon --watch src/ -e ts,tsx --exec \"tsc && vite build && tsc --emitDeclarationOnly\""
+    "watch": "nodemon --watch src/ -e ts,tsx --exec \"tsc && vite build && tsc --emitDeclarationOnly\"",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@ladle/react": "^2.3.0",
@@ -53,15 +54,12 @@
     "typescript": "^4.3.2",
     "vite": "^2.6.4",
     "vite-plugin-dts": "^0.9.9",
-    "vite-tsconfig-paths": "^3.4.0"
+    "vite-tsconfig-paths": "^3.4.0",
+    "vitest": "^0.23.4"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/antstackio/hover-design.git"
   },
   "publishConfig": {
     "access": "public"
