--- a/examples/vanilla-extract-react/package.json
+++ b/examples/vanilla-extract-react/package.json
@@ -7,13 +7,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hover-design/react": "*",
     "@vanilla-extract/css": "^1.6.8",
     "@vanilla-extract/vite-plugin": "^3.1.2",
     "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "vite-tsconfig-paths": "^3.3.17",
-    "@hover-design/react": "*"
+    "react-icons": "^4.4.0",
+    "vite-tsconfig-paths": "^3.3.17"
   },
   "devDependencies": {
     "@types/react": "^18.0.6",
