--- a/docs/package.json
+++ b/docs/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.1",
     "@tsconfig/docusaurus": "^1.0.5",
+    "@types/react": "^18.0.6",
     "typescript": "^4.6.4"
   },
   "browserslist": {
