--- a/lib/package.json
+++ b/lib/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.12",
   "description": "Hover Component library created by bunch of ants from antstack",
   "license": "MIT",
-  "main": "dist/hover-react.es.js",
-  "module": "dist/hover-react.es.js",
-  "types": "dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./src/index.ts"
+    }
+  },
+  "types": "./src/index.ts",
+  "files": [
+    "src"
+  ],
   "private": false,
   "repository": {
     "type": "git",
@@ -23,8 +29,8 @@
     "hover"
   ],
   "scripts": {
-    "dev": "nodemon --watch src/ -e ts,tsx --exec \"tsc && vite build && tsc --emitDeclarationOnly\"",
-    "build": "tsc && vite build && tsc --emitDeclarationOnly",
+    "devv": "nodemon --watch src/ -e ts,tsx --exec \"tsc && vite build && tsc --emitDeclarationOnly\"",
+    "buildd": "tsc && vite build && tsc --emitDeclarationOnly",
     "tsc": "tsc",
     "ladle": "ladle serve",
     "serve": "vite preview",
