--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -32,7 +32,7 @@
     "tsc": "tsc",
     "ladle": "ladle serve",
     "serve": "vite preview",
-    "lint": "eslint src/**/**.{ts,tsx}",
+    "lint": "eslint 'src/**/*.ts?(x)'",
     "watch": "nodemon --watch src/ -e ts,tsx --exec \"tsc && vite build && tsc --emitDeclarationOnly\"",
     "test": "vitest",
     "coverage": "vitest run --coverage"
