--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   },
   "packageManager": "pnpm@6.32.3",
   "scripts": {
-    "prebuild": "test \"$CI\" = true && npx pnpm install -r --store=node_modules/.pnpm-store || echo skiping pnpm install",
-    "build": "turbo run build --filter=!./examples/*",
+    "dev": "turbo run dev --no-cache --parallel --continue",
     "test": "turbo run test --filter=@hover-design/react",
     "lint": "turbo run lint",
-    "dev": "turbo run dev --no-cache --parallel --continue",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "prebuild": "test \"$CI\" = true && npx pnpm install -r --store=node_modules/.pnpm-store || echo skiping pnpm install",
+    "build": "turbo run build --filter=!./examples/*",
     "publish-build": "turbo run build --filter=@hover-design/react --no-deps --include-dependencies",
     "ladle": "turbo run ladle --filter=@hover-design/react --no-deps --include-dependencies"
   },
