--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dev": "turbo run dev --no-cache --parallel --continue",
     "test": "turbo run test --filter=@hover-design/react",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "format": "prettier --write \"**/*.{ts,tsx,md,mdx}\"",
     "prebuild": "test \"$CI\" = true && npx pnpm install -r --store=node_modules/.pnpm-store || echo skiping pnpm install",
     "build": "turbo run build --filter=!./examples/*",
     "publish-build": "turbo run build --filter=@hover-design/react --no-deps --include-dependencies",
