--- a/examples/vanilla-extract-react/package.json
+++ b/examples/vanilla-extract-react/package.json
@@ -18,6 +18,7 @@
     "vite-tsconfig-paths": "^3.3.17"
   },
   "devDependencies": {
+    "@hover-design/eslint-config": "*",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^1.0.7",
