--- a/docs/package.json
+++ b/docs/package.json
@@ -23,6 +23,7 @@
     "@vanilla-extract/webpack-plugin": "^2.1.10",
     "clsx": "^1.1.1",
     "docusaurus-plugin-vanilla-extract": "^1.0.1",
+    "framer-motion": "6.2.4",
     "polished": "^4.1.3",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
