--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -41,6 +41,6 @@ jobs:
         run: pnpm publish-build
 
       - name: Publish package on NPM 📦
-        run: cd ./packages/lib && npm publish --access public --no-git-checks
+        run: cd ./packages/react && npm publish --access public --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
