fix: Fixes build issue

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,9 +28,7 @@
     "vanilla-extract",
     "hover"
   ],
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "dependencies": {
     "@vanilla-extract/css": "^1.6.8",
     "@vanilla-extract/css-utils": "^0.1.2",
