--- a/docs/package.json
+++ b/docs/package.json
@@ -24,13 +24,14 @@
     "clsx": "^1.1.1",
     "docusaurus-plugin-vanilla-extract": "^1.0.1",
     "prism-react-renderer": "^1.3.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.6",
+    "react-dom": "^18.0.6",
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.1",
     "@tsconfig/docusaurus": "^1.0.5",
+    "@types/node": "^17.0.21",
     "@types/react": "^18.0.6",
     "typescript": "^4.6.4"
   },
