--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -47,8 +47,8 @@
     "@vanilla-extract/vite-plugin": "^3.1.0",
     "deepmerge": "^4.2.2",
     "polished": "^4.1.3",
-    "react": ">=17.0.0",
-    "react-dom": ">=17.0.0",
+    "react": "^18.0.6",
+    "react-dom": "^18.0.6",
     "@hover-design/core": "*"
   },
   "devDependencies": {
