--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hover-design/react",
-  "version": "0.1.12",
+  "version": "0.2.1-beta",
   "description": "Hover Component library created by bunch of ants from antstack",
   "license": "MIT",
   "exports": {
@@ -45,7 +45,6 @@
     "@vanilla-extract/recipes": "^0.2.3",
     "@vanilla-extract/sprinkles": "^1.3.3",
     "@vanilla-extract/vite-plugin": "^3.1.0",
-    "deepmerge": "^4.2.2",
     "polished": "^4.1.3",
     "react": "^18.0.6",
     "react-dom": "^18.0.6",
