--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hover-design/react",
-  "version": "0.2.2-beta",
+  "version": "0.2.3-beta",
   "description": "Hover Component library created by bunch of ants from antstack",
   "license": "MIT",
   "exports": {
@@ -38,8 +38,9 @@
     "lint": "eslint 'src/**/*.ts?(x)' --fix"
   },
   "dependencies": {
+    "@hover-design/core": "0.0.1-beta",
     "@ladle/react": "^2.3.0",
-    "@vanilla-extract/css": "^1.6.8",
+    "@vanilla-extract/css": "^1.9.5",
     "@vanilla-extract/css-utils": "^0.1.2",
     "@vanilla-extract/dynamic": "^2.0.2",
     "@vanilla-extract/recipes": "^0.2.3",
@@ -47,14 +48,13 @@
     "@vanilla-extract/vite-plugin": "^3.1.0",
     "polished": "^4.1.3",
     "react": "^18.0.6",
-    "react-dom": "^18.0.6",
-    "@hover-design/core": "0.0.1-beta"
+    "react-dom": "^18.0.6"
   },
   "devDependencies": {
     "@hover-design/eslint-config": "*",
-    "@types/node": "^17.0.21",
-    "@types/react": "^18.0.6",
-    "@types/react-dom": "^18.0.6",
+    "@types/node": "^20.1.0",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "@vitejs/plugin-react": "^1.0.0",
     "nodemon": "^2.0.18",
     "typescript": "^4.3.2",
@@ -64,9 +64,9 @@
     "vitest": "^0.23.4"
   },
   "peerDependencies": {
+    "@hover-design/core": "0.0.1-beta",
     "react": "^18.0.6",
-    "react-dom": "^18.0.6",
-    "@hover-design/core": "0.0.1-beta"
+    "react-dom": "^18.0.6"
   },
   "publishConfig": {
     "access": "public"
