--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,7 +28,10 @@
     "vanilla-extract",
     "hover"
   ],
-  "scripts": {},
+  "scripts": {
+    "tsc": "tsc",
+    "lint": "eslint 'src/**/*.ts?(x)' --fix"
+  },
   "dependencies": {
     "@vanilla-extract/css": "^1.6.8",
     "@vanilla-extract/css-utils": "^0.1.2",
