--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,7 +37,8 @@
     "@vanilla-extract/css-utils": "^0.1.2",
     "@vanilla-extract/dynamic": "^2.0.2",
     "@vanilla-extract/recipes": "^0.2.3",
-    "@vanilla-extract/sprinkles": "^1.3.3"
+    "@vanilla-extract/sprinkles": "^1.3.3",
+    "polished": "^4.1.3"
   },
   "devDependencies": {
     "@hover-design/eslint-config": "*",
