refactor: fixed tokens and input component

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -19,5 +19,5 @@
     "noEmit": false,
     "jsx": "react-jsx"
   },
-  "include": ["./src"]
+  "include": ["./src", "../core/src/styles/tokens"]
 }
