--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -39,6 +39,7 @@
     "lint": "eslint 'src/**/*.ts?(x)' --fix"
   },
   "dependencies": {
+    "@hover-design/core": "*",
     "@ladle/react": "^2.3.0",
     "@vanilla-extract/css": "^1.6.8",
     "@vanilla-extract/css-utils": "^0.1.2",
@@ -47,14 +48,12 @@
     "@vanilla-extract/sprinkles": "^1.3.3",
     "@vanilla-extract/vite-plugin": "^3.1.0",
     "deepmerge": "^4.2.2",
-    "polished": "^4.1.3",
     "react": "^18.0.6",
-    "react-dom": "^18.0.6",
-    "@hover-design/core": "*"
+    "react-dom": "^18.0.6"
   },
   "devDependencies": {
     "@hover-design/eslint-config": "*",
-    "@types/node": "^17.0.21",
+    "@types/node": "^20.8.6",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^1.0.0",
